--- a/src/Sitecore.Support.95200/Sitecore.Support.95200.csproj
+++ b/src/Sitecore.Support.95200/Sitecore.Support.95200.csproj
@@ -62,9 +62,8 @@
     <None Include="packages.config" />
     <None Include="web.config" />
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
-    <Content Include="sitecore\shell\override\ProgressDialog.xaml.xml" />
+    <Content Include="sitecore\shell\applications\dialogs\progress\ProgressDialog.xaml.xml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
